Basic application with create-react-app

--- a/0x01-react_intro/task_0/dashboard/.gitignore
+++ b/0x01-react_intro/task_0/dashboard/.gitignore
@@ -11,7 +11,7 @@ public
 # files
 dashboard/README.md
 src/175b85183ecedb529e14.jpg 
-src/'e240f8157634d33a9757 (1).ico'
+src/e240f8157634d33a9757 (1).ico
 src/index.js
 src/logo.svg
 src/reportWebVitals.js
