--- a/0x01-react_intro/task_5/dashboard/package.json
+++ b/0x01-react_intro/task_5/dashboard/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest",
     "build": "webpack --mode production --config ./config/webpack.config.js",
     "start-dev": "webpack serve --open --config ./config/webpack.config.js"
   },
@@ -20,6 +20,7 @@
     "css-loader": "^6.8.1",
     "file-loader": "^6.2.0",
     "image-webpack-loader": "^8.1.0",
+    "jest": "^29.7.0",
     "style-loader": "^3.3.3",
     "webpack": "^5.89.0",
     "webpack-cli": "^5.1.4",
