Write the tests for each component

--- a/0x02-react_props/task_1/dashboard/package.json
+++ b/0x02-react_props/task_1/dashboard/package.json
@@ -5,7 +5,9 @@
   "main": "index.js",
   "jest": {
     "testEnvironment": "jsdom",
-    "setupFilesAfterEnv": ["@testing-library/jest-dom/extend-expect"]
+    "setupFilesAfterEnv": [
+      "@testing-library/jest-dom/extend-expect"
+    ]
   },
   "scripts": {
     "test": "jest",
